--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "next": "14.2.5",
     "prettier": "^3.3.3",
     "react": "^18",
